[project]
name = "early-mcp"
version = "0.1.0"
description = "MCP server for Early (Timeular) time tracking"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
